--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,16 +23,13 @@
                 <button class="btn btn-signup">Sign Up</button>
             </div>
             <div class="user-panel" aria-live="polite">
-                <div class="user-profile">
+                <div class="user-profile" role="button" aria-expanded="false" aria-label="Menu người dùng">
                     <img src="/src/assets/images/van-nam.jpg" alt="Ảnh đại diện Nam Nguyễn" class="user-avatar">
                     <div class="user-meta">
                         <span class="user-name">Nam Nguyễn</span>
                         <span class="user-location">Tp. Hồ Chí Minh</span>
                     </div>
                 </div>
-                <button class="icon-button more-button" aria-label="Thêm tùy chọn" aria-expanded="false">
-                    <i class="fa-solid fa-bars"></i>
-                </button>
                 <div class="user-menu" role="menu">
                     <button class="user-menu-item" data-action="account" role="menuitem">Tài khoản</button>
                     <button class="user-menu-item" data-action="orders" role="menuitem">Đơn hàng</button>
